--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,12 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.sonarsource.scanner.maven</groupId>
+			<artifactId>sonar-maven-plugin</artifactId>
+			<version>5.0.0.4389</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
